--- a/src/app/dialing-computer/pages/gate-screen/gate-screen.page.scss
+++ b/src/app/dialing-computer/pages/gate-screen/gate-screen.page.scss
@@ -94,6 +94,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	position: relative;
 	width: 100%;
 }
 
